feat: align overige-objecten-api response with kiss
